Add git alias for 'cherry-pick'

--- a/.gitconfig
+++ b/.gitconfig
@@ -39,6 +39,9 @@
 
     # Switch to a branch
     co = checkout
+    
+    # Cherry pick a commit
+    cp = cherry-pick
 
 	# Switch to a branch, creating it if necessary
 	# go = "!f() { git checkout -b \"$1\" 2> /dev/null || git checkout \"$1\"; }; f"
