--- a/.gitconfig
+++ b/.gitconfig
@@ -171,7 +171,7 @@
 
 	# Include summaries of merged commits in newly created merge commit messages
 	log = true
-    ff = false
+    ff = true
 
 [push]
 
