--- a/.gitconfig
+++ b/.gitconfig
@@ -45,9 +45,9 @@
 
     # Cherry pick a commit
     cp = cherry-pick
-    
+
     # Unstage files
-    unstage - reset HEAD -- .
+    unstage = reset HEAD -- .
 
 	# Switch to a branch, creating it if necessary
 	# go = "!f() { git checkout -b \"$1\" 2> /dev/null || git checkout \"$1\"; }; f"
