git pr (fetch prune, pull rebase)

--- a/.gitconfig
+++ b/.gitconfig
@@ -18,6 +18,10 @@
 	# Pull in remote changes for the current repository and all its submodules
 	p = !"git pull; git submodule foreach git pull origin master"
 
+
+	# Fetch (prune) and Pull (rebase) in remote changes for the current repository
+	pr = !"git fetch --prune; git pull --rebase;"
+
 	# Clone a repository including all submodules
 	c = clone --recursive
 
