--- a/.gitconfig
+++ b/.gitconfig
@@ -129,6 +129,9 @@
 	# https://git-scm.com/docs/git-update-index#_untracked_cache
 	untrackedCache = true
 
+	# Set Git editor to VS Code
+	editor = code -wait
+
 [color]
 
 	# Use colors in Git commands that are capable of colored output when
